--- a/Week 3/w3 hwk1.ipynb
+++ b/Week 3/w3 hwk1.ipynb
@@ -13,20 +13,61 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "81e07d96",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 128 entries, 0 to 127\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column                      Non-Null Count  Dtype  \n",
+      "---  ------                      --------------  -----  \n",
+      " 0   Age                         128 non-null    int64  \n",
+      " 1   Gender                      128 non-null    object \n",
+      " 2   BMI                         125 non-null    float64\n",
+      " 3   Blood Pressure              128 non-null    object \n",
+      " 4   FBS                         128 non-null    int64  \n",
+      " 5   HbA1c                       128 non-null    float64\n",
+      " 6   Family History of Diabetes  126 non-null    object \n",
+      " 7   Smoking                     126 non-null    object \n",
+      " 8   Diet                        126 non-null    object \n",
+      " 9   Exercise                    127 non-null    object \n",
+      " 10  Diagnosis                   128 non-null    object \n",
+      "dtypes: float64(2), int64(2), object(7)\n",
+      "memory usage: 11.1+ KB\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
-    "# Initialise dataset\n"
+    "import matplotlib.pyplot as plt \n",
+    "import pandas as pd \n",
+    "import numpy as np \n",
+    "\n",
+    "# Initialise dataset\n",
+    "df = pd.read_csv(\"Diabetes-Classification.csv\")\n",
+    "df.info()\n"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
