w3 hwk1 - feature selection

--- a/Week 3/w3 hwk1.ipynb
+++ b/Week 3/w3 hwk1.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "81e07d96",
    "metadata": {},
    "outputs": [
@@ -38,92 +38,6 @@
       "dtypes: float64(2), int64(2), object(7)\n",
       "memory usage: 11.1+ KB\n"
      ]
-    },
-    {
-     "data": {
-      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
-       "columns": [
-        {
-         "name": "index",
-         "rawType": "object",
-         "type": "string"
-        },
-        {
-         "name": "0",
-         "rawType": "int64",
-         "type": "integer"
-        }
-       ],
-       "ref": "0cd8336f-11fd-492d-85cc-8fb126fe1d00",
-       "rows": [
-        [
-         "Age",
-         "0"
-        ],
-        [
-         "Gender",
-         "0"
-        ],
-        [
-         "BMI",
-         "3"
-        ],
-        [
-         "Blood Pressure",
-         "0"
-        ],
-        [
-         "FBS",
-         "0"
-        ],
-        [
-         "HbA1c",
-         "0"
-        ],
-        [
-         "Family History of Diabetes",
-         "2"
-        ],
-        [
-         "Smoking",
-         "2"
-        ],
-        [
-         "Diet",
-         "2"
-        ],
-        [
-         "Exercise",
-         "1"
-        ],
-        [
-         "Diagnosis",
-         "0"
-        ]
-       ],
-       "shape": {
-        "columns": 1,
-        "rows": 11
-       }
-      },
-      "text/plain": [
-       "Age                           0\n",
-       "Gender                        0\n",
-       "BMI                           3\n",
-       "Blood Pressure                0\n",
-       "FBS                           0\n",
-       "HbA1c                         0\n",
-       "Family History of Diabetes    2\n",
-       "Smoking                       2\n",
-       "Diet                          2\n",
-       "Exercise                      1\n",
-       "Diagnosis                     0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -138,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "a9b6f66e",
    "metadata": {},
    "outputs": [
@@ -157,7 +71,7 @@
          "type": "integer"
         }
        ],
-       "ref": "561ded15-f0ef-4a39-9695-987cf9d4129a",
+       "ref": "88868d1c-baac-4d13-a5a5-4092d8a85f86",
        "rows": [
         [
          "Age",
@@ -224,7 +138,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "1b149c03",
    "metadata": {},
    "outputs": [
@@ -306,7 +220,7 @@
          "type": "string"
         }
        ],
-       "ref": "70b43d3c-540d-42ee-8d65-634b909fa102",
+       "ref": "2bbfd561-b877-4dc7-b187-af6b0311e45e",
        "rows": [
         [
          "0",
@@ -507,7 +421,7 @@
        "5      No  Healthy  Regular        No  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "2b96338c",
    "metadata": {},
    "outputs": [
@@ -622,7 +536,7 @@
          "type": "integer"
         }
        ],
-       "ref": "a0ce60be-11e1-477d-b5d5-c17c0946f6b6",
+       "ref": "2ebc8bfe-43a3-482e-84d4-eb9b386baa00",
        "rows": [
         [
          "0",
@@ -914,7 +828,7 @@
        "5            0             1          0            0                 1  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -928,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "aa42d1ec",
    "metadata": {},
    "outputs": [
@@ -1032,7 +946,7 @@
          "type": "integer"
         }
        ],
-       "ref": "b1e7477c-6713-44f9-878d-ad67354687ce",
+       "ref": "ac8b1f88-8cea-49ff-8ffd-a0eee987be02",
        "rows": [
         [
          "0",
@@ -1324,7 +1238,7 @@
        "5            0             1          0            0                 1  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1334,6 +1248,66 @@
     "fully_encoded = one_encoded.copy()\n",
     "fully_encoded[\"Diagnosis\"] = one_encoded[\"Diagnosis\"].map({\"No\": 0, \"Yes\": 1})\n",
     "fully_encoded.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1e4f01ae",
+   "metadata": {},
+   "source": [
+    "Dataset is ready for use\n",
+    "\n",
+    "Chosen models for evaluation are Logistic Regression, Random Forest "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "81e6a48e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['Age', 'BMI', 'FBS', 'Diet_Healthy', 'Exercise_Regular'], dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Feature Selection\n",
+    "from sklearn.feature_selection import SelectKBest, chi2, f_classif\n",
+    "\n",
+    "# Top 5 Categorical Features\n",
+    "cat_selector = SelectKBest(score_func = chi2, k = 5)\n",
+    "x = fully_encoded.drop([\"Diagnosis\"], axis = 1)\n",
+    "y = fully_encoded[\"Diagnosis\"]\n",
+    "\n",
+    "x_selected = cat_selector.fit_transform(x, y) #train selector on datset\n",
+    "cat_selected = x.columns[cat_selector.get_support()]\n",
+    "print (cat_selected)\n",
+    "\n",
+    "#Top 2 Numeric Features\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7b58a44",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (2110649258.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[15]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mx_test, x_train, y_test, y_train =\u001b[39m\n                                       ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Train-test split on selected features\n",
+    "x_test, x_train, y_test, y_train = "
    ]
   }
  ],
