w3 hwk1 - traintest split

--- a/Week 3/w3 hwk1.ipynb
+++ b/Week 3/w3 hwk1.ipynb
@@ -1262,7 +1262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "81e6a48e",
    "metadata": {},
    "outputs": [
@@ -1270,7 +1270,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['Age', 'BMI', 'FBS', 'Diet_Healthy', 'Exercise_Regular'], dtype='object')\n"
+      "Categorical selected features:\n",
+      " Index(['Family History of Diabetes_Yes', 'Smoking_No', 'Diet_Healthy',\n",
+      "       'Exercise_No', 'Exercise_Regular'],\n",
+      "      dtype='object')\n",
+      "\n",
+      "Numerical selected features:\n",
+      " Index(['FBS', 'HbA1c'], dtype='object')\n"
      ]
     }
    ],
@@ -1280,14 +1286,20 @@
     "\n",
     "# Top 5 Categorical Features\n",
     "cat_selector = SelectKBest(score_func = chi2, k = 5)\n",
-    "x = fully_encoded.drop([\"Diagnosis\"], axis = 1)\n",
+    "x_cat = fully_encoded.drop([\"Diagnosis\", \"BMI\", \"Age\", \"FBS\", \"HbA1c\"], axis = 1)\n",
     "y = fully_encoded[\"Diagnosis\"]\n",
     "\n",
-    "x_selected = cat_selector.fit_transform(x, y) #train selector on datset\n",
-    "cat_selected = x.columns[cat_selector.get_support()]\n",
-    "print (cat_selected)\n",
+    "x_selected = cat_selector.fit_transform(x_cat, y) #train selector on datset\n",
+    "cat_selected = x_cat.columns[cat_selector.get_support()]\n",
+    "print (f\"Categorical selected features:\\n\", cat_selected)\n",
     "\n",
-    "#Top 2 Numeric Features\n"
+    "#Top 2 Numeric Features\n",
+    "num_selector = SelectKBest(score_func = f_classif, k = 2)\n",
+    "x_num = fully_encoded.drop([\"Diagnosis\", \"Gender_Female\", \"Gender_Male\", \"Family History of Diabetes_No\", \"Family History of Diabetes_Yes\", \"Smoking_No\", \"Smoking_Yes\", \"Diet_Healthy\", \"Diet_Poor\", \"Exercise_No\", \"Exercise_Regular\"], axis = 1)\n",
+    "\n",
+    "xnum_selected = num_selector.fit_transform(x_num, y) \n",
+    "num_selected = x_num.columns[num_selector.get_support()]\n",
+    "print (f\"\\nNumerical selected features:\\n\", num_selected)"
    ]
   },
   {
@@ -1306,8 +1318,19 @@
     }
    ],
    "source": [
-    "# Train-test split on selected features\n",
-    "x_test, x_train, y_test, y_train = "
+    "# Combine selected features\n",
+    "import pandas as pd\n",
+    "all_selected = pd.concat([pd.DataFrame(x_cat, columns = cat_selected),\n",
+    "                        pd.DataFrame(x_num, columns = num_selected)], axis=1)\n",
+    "print(\"Combined Selected Features:\\n\", all_selected.columns.tolist())\n",
+    "\n",
+    "# Train-test split on selected features \n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "x_test, x_train, y_test, y_train = train_test_split()\n",
+    "\n",
+    "#Linear Regression on selected features \n",
+    "from sklearn.linear_model import LinearRegression"
    ]
   }
  ],
