half of week 4 theory  & almost complete week 3 hwk1

--- a/Week 4/Further Supervised Learning.ipynb
+++ b/Week 4/Further Supervised Learning.ipynb
@@ -188,13 +188,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "a3f792f3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Logistic Regression (OVR) Performance: \n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00        15\n",
+      "           1       0.93      0.87      0.90        15\n",
+      "           2       0.80      0.89      0.84         9\n",
+      "\n",
+      "    accuracy                           0.92        39\n",
+      "   macro avg       0.91      0.92      0.91        39\n",
+      "weighted avg       0.93      0.92      0.92        39\n",
+      "\n",
+      "Confusion Matrix:\n",
+      " [[15  0  0]\n",
+      " [ 0 13  2]\n",
+      " [ 0  1  8]]\n"
+     ]
+    }
+   ],
    "source": [
     "#ASSIGNMENT END\n",
-    "# Multiclass Classification\n"
+    "# Multiclass Classification without dataset balancing\n",
+    "# LogReg (OVR)\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.multiclass import OneVsRestClassifier, OneVsOneClassifier\n",
+    "from sklearn.metrics import confusion_matrix, classification_report, accuracy_score, precision_score, recall_score, f1_score, log_loss, roc_auc_score, roc_curve\n",
+    "\n",
+    "lr_ovr = OneVsRestClassifier(LogisticRegression())\n",
+    "lr_ovr.fit(X_train, y_train)\n",
+    "y_pred_lrovr = lr_ovr.predict(X_test)\n",
+    "\n",
+    "print(\"Logistic Regression (OVR) Performance: \")\n",
+    "print(classification_report(y_test, y_pred_lrovr))\n",
+    "\n",
+    "print(\"Confusion Matrix:\\n\", confusion_matrix(y_test, y_pred_lrovr))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "f99087ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Logistic Regression (One-vs-Rest) Performance balanced weights:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00        15\n",
+      "           1       1.00      0.60      0.75        15\n",
+      "           2       0.60      1.00      0.75         9\n",
+      "\n",
+      "    accuracy                           0.85        39\n",
+      "   macro avg       0.87      0.87      0.83        39\n",
+      "weighted avg       0.91      0.85      0.85        39\n",
+      "\n",
+      "Confusion Matrix:\n",
+      "[[15  0  0]\n",
+      " [ 0  9  6]\n",
+      " [ 0  0  9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn import set_config\n",
+    "\n",
+    "# Enable metadata routing for OVRClassifier\n",
+    "set_config(enable_metadata_routing = True)\n",
+    "\n",
+    "# train model with sample weights using OVR with Logistic Regression\n",
+    "clf = OneVsRestClassifier(LogisticRegression(class_weight = class_weights_dict, max_iter=10000))\n",
+    "clf.estimator.set_fit_request(sample_weight = True)  # Explicitly request sample_weight\n",
+    "clf.fit(X_train, y_train, sample_weight = sw_train)\n",
+    "\n",
+    "y_pred = clf.predict(X_test)\n",
+    "\n",
+    "# Classification Report and Confusion Matrix\n",
+    "print(\"\\nLogistic Regression (One-vs-Rest) Performance balanced weights:\")\n",
+    "print(classification_report(y_test, y_pred))\n",
+    "print(\"Confusion Matrix:\")\n",
+    "print(confusion_matrix(y_test, y_pred))"
    ]
   }
  ],
