completed w3 main code

--- a/Week 3/Supervised Learning.ipynb
+++ b/Week 3/Supervised Learning.ipynb
@@ -1366,10 +1366,11 @@
     "#### Conclusions for each model\n",
     "\n",
     "Objective: Interpreting the ROC curves and confusion matrices of the KNN and SVM models\n",
+    "Note: Diagnosis_No is 0 class.\n",
     "\n",
-    "The dataset is balanced so we favour Accuracy over F1 score and, as this is a medical case, False Negatives are more expensive so we favour Recall over Precision. So, overall, it appears that the SVM model performed much better than the KNN model. It boasts an accuracy of 83% and a recall of 0%, whereas the KNN model presents with an accuracy of 61% and a recall of 33%. This means that the KNN model picked up a lower amount of true positives and more false classifications overall. However, the story changes when you realise that the SVM model has given a precision of 0%, this indicates that it didn't detect any positive classifications at all. It is a symptom of an imbalanced dataset. The SVM model has classified everything as the majority class here which is No Diagnosis. Lastly, for the SVM model, AUC = 0.91 and for the KNN model, AUC = 0.62. \n",
+    "The dataset is balanced so we favour Accuracy over F1 score and, as this is a medical case, False Negatives are more expensive so we favour Recall over Precision. So, overall, it appears that the SVM model performed much better than the KNN model. It boasts an accuracy of 83% and a recall of 0%, whereas the KNN model presents with an accuracy of 61% and a recall of 33%. This means that the KNN model picked up a lower amount of true positives and more false classifications overall. However, it's also important to realise that the SVM model has given a precision of 0%, this indicates that it didn't detect any positive classifications at all. It is a symptom of an imbalanced dataset. The SVM model has classified everything as the majority class here which is No Diagnosis. Lastly, for the SVM model, AUC = 0.91 and for the KNN model, AUC = 0.62, further demonstrating that the KNN clasified more false positives than the SVM model.\n",
     "\n",
-    "In conclusion, "
+    "In conclusion, I believe that the KNN model worked better as false negatives are extremely costly in healthcare in comparison to false positives. "
    ]
   }
  ],
