--- a/Week 3/w3 hwk2.ipynb
+++ b/Week 3/w3 hwk2.ipynb
@@ -829,56 +829,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "e2e56609",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "KNN Performance:\n",
-      "               precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.83      0.67      0.74        30\n",
-      "           1       0.17      0.33      0.22         6\n",
-      "\n",
-      "    accuracy                           0.61        36\n",
-      "   macro avg       0.50      0.50      0.48        36\n",
-      "weighted avg       0.72      0.61      0.65        36\n",
-      "\n",
-      "KNN_Selected Performance:\n",
-      "               precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.83      0.67      0.74        30\n",
-      "           1       0.17      0.33      0.22         6\n",
-      "\n",
-      "    accuracy                           0.61        36\n",
-      "   macro avg       0.50      0.50      0.48        36\n",
-      "weighted avg       0.72      0.61      0.65        36\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "#classification report\n",
-    "from sklearn.metrics import classification_report\n",
-    "\n",
-    "print(f\"KNN Performance:\\n\", classification_report(y_test, y_pred_knn))\n",
-    "print(f\"KNN_Selected Performance:\\n\", classification_report(y_test, y_pred_knn1))\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a267826f",
-   "metadata": {},
-   "source": [
-    "The selected features here are different than that of the one hot encoded dataset however, we still get the same classification report so the model still works here."
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 9,
    "id": "69abd3fe",
    "metadata": {},
@@ -903,67 +853,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "3407fc46",
+   "execution_count": null,
+   "id": "432d2f25",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SVM Performance:\n",
-      "\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.83      1.00      0.91        30\n",
-      "           1       0.00      0.00      0.00         6\n",
-      "\n",
-      "    accuracy                           0.83        36\n",
-      "   macro avg       0.42      0.50      0.45        36\n",
-      "weighted avg       0.69      0.83      0.76        36\n",
-      "\n",
-      "SVM_Selected Performance:\n",
-      "\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.83      1.00      0.91        30\n",
-      "           1       0.00      0.00      0.00         6\n",
-      "\n",
-      "    accuracy                           0.83        36\n",
-      "   macro avg       0.42      0.50      0.45        36\n",
-      "weighted avg       0.69      0.83      0.76        36\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Admin\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\metrics\\_classification.py:1731: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", result.shape[0])\n",
-      "C:\\Users\\Admin\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\metrics\\_classification.py:1731: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", result.shape[0])\n",
-      "C:\\Users\\Admin\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\metrics\\_classification.py:1731: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", result.shape[0])\n",
-      "C:\\Users\\Admin\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\metrics\\_classification.py:1731: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", result.shape[0])\n",
-      "C:\\Users\\Admin\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\metrics\\_classification.py:1731: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", result.shape[0])\n",
-      "C:\\Users\\Admin\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\metrics\\_classification.py:1731: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", result.shape[0])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#classification report\n",
+    "# Classification reports for models using label encoded data\n",
     "\n",
     "from sklearn.metrics import classification_report\n",
     "\n",
-    "print(\"SVM Performance:\\n\")\n",
-    "print(classification_report(y_test, y_pred_svm))\n",
-    "\n",
-    "print(\"SVM_Selected Performance:\\n\")\n",
-    "print(classification_report(y_test, y_pred_svm1))"
+    "print(f\"KNN_Selected Performance:\\n\", classification_report(y_test, y_pred_knn1))\n",
+    "print(\"SVM_Selected Performance:\\n\", classification_report(y_test, y_pred_svm1))"
    ]
   },
   {
